lab9pingpong/lab9pingpong.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lab9pingpong.build.log
23:30:48 **** Auto Build of configuration Debug for project lab9pingpong ****
make all 
'Building file: ../src/lab9.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab9.o" -I../../lab9pingpong_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/lab9.d" -MT"src/lab9.d" -o "src/lab9.o" "../src/lab9.c"
../src/lab9.c: In function 'main':
../src/lab9.c:12:25: error: 'XPAR_AXI_GPIO_1_DEVICE_ID' undeclared (first use in this function)
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/lab9.c:186:38: note: in expansion of macro 'LEDS_DEVICE_ID'
  status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                      ^
../src/lab9.c:12:25: note: each undeclared identifier is reported only once for each function it appears in
 #define LEDS_DEVICE_ID  XPAR_AXI_GPIO_1_DEVICE_ID
                         ^
../src/lab9.c:186:38: note: in expansion of macro 'LEDS_DEVICE_ID'
  status = XGpio_Initialize(&LEDInst, LEDS_DEVICE_ID);
                                      ^
../src/lab9.c:11:25: error: 'XPAR_AXI_GPIO_0_DEVICE_ID' undeclared (first use in this function)
 #define BTNS_DEVICE_ID  XPAR_AXI_GPIO_0_DEVICE_ID
                         ^
../src/lab9.c:190:38: note: in expansion of macro 'BTNS_DEVICE_ID'
  status = XGpio_Initialize(&BTNInst, BTNS_DEVICE_ID);
                                      ^
../src/lab9.c:193:25: error: 'XPAR_AXI_GPIO_2_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&dip, XPAR_AXI_GPIO_2_DEVICE_ID);
                         ^
../src/lab9.c:207:2: warning: passing argument 2 of 'XTmrCtr_SetHandler' from incompatible pointer type
  XTmrCtr_SetHandler(&TMRInst, TMR_Intr_Handler, &TMRInst);
  ^
In file included from ../src/lab9.c:3:0:
../../lab9pingpong_bsp/ps7_cortexa9_0/include/xtmrctr.h:293:6: note: expected 'XTmrCtr_Handler' but argument is of type 'void (*)(void *)'
 void XTmrCtr_SetHandler(XTmrCtr * InstancePtr, XTmrCtr_Handler FuncPtr,
      ^
../src/lab9.c: In function 'IntcInitFunction':
../src/lab9.c:13:32: error: 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                ^
../src/lab9.c:267:2: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
  INTC_GPIO_INTERRUPT_ID, (Xil_ExceptionHandler) BTN_Intr_Handler,
  ^
../src/lab9.c: At top level:
../src/lab9.c:37:12: warning: 'tmr_count' defined but not used [-Wunused-variable]
 static int tmr_count;
            ^
make: *** [src/lab9.o] Error 1

23:30:49 Build Finished (took 609ms)

